Fixed the spacing issues.

--- a/index.css
+++ b/index.css
@@ -30,3 +30,6 @@ header h1 {
 	text: text-center;
 }
 
+#centerModal{
+    margin: 0 auto;
+}
